# ice_resurfacer_ros2

./: .gitignore  README.md  cmd_vel_relay.py  drive_bridge.py  my_mapper_params.yaml  oval_route.py  smac_oval.py  zamboni_route.py
ice_resurfacer_description/: CMakeLists.txt
ice_resurfacer_description/config/: controllers.yaml  ekf.yaml  nav2_params.yaml
ice_resurfacer_description/launch/: visualize.launch.py
ice_resurfacer_description/meshes/: Zamboni_body.stl
ice_resurfacer_description/urdf/: ice_resurfacer.urdf.xacro  ice_resurfacer2.urdf.xacro
ice_resurfacer_gazebo/: CMakeLists.txt  package.xml
ice_resurfacer_gazebo/launch/: autonomy.launch.py  simulation.launch.py
ice_resurfacer_gazebo/meshes/: goal_2_20260612.stl  hockey_rink.stl  hockey_rink_old.stl  hockey_rink_old2.stl  ice_hockey_rink5.stl  icehockeyrink6.stl  just_goal_20260612.stl  just_rink_20260612.stl  just_top_of_board_20260612.stl  top_of_board_20260612.stl
ice_resurfacer_gazebo/worlds/: ice_rink.sdf  ice_rink_old.sdf
ice_resurfacer_nav/: CMakeLists.txt
ice_resurfacer_nav/config/: nav2_params.yaml  navigate_to_pose_ackermann.xml
ice_resurfacer_nav/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ice_resurfacer_nav/install/ice_resurfacer_nav/share/ice_resurfacer_nav/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.zsh
ice_resurfacer_nav/install/ice_resurfacer_nav/share/ice_resurfacer_nav/cmake/: ice_resurfacer_navConfig-version.cmake  ice_resurfacer_navConfig.cmake
ice_resurfacer_nav/install/ice_resurfacer_nav/share/ice_resurfacer_nav/config/: navigate_to_pose_ackermann.xml
ice_resurfacer_nav/launch/: zamboni_nav.launch.py
ice_resurfacer_nav/log/: latest_build
ice_resurfacer_nav/maps/: iihf_rink.pgm  iihf_rink.yaml  iihf_rink3.yaml  iihf_rink4.pgm  iihf_rink4.yaml  iihf_rink5.pgm  iihf_rink5.yaml  iihf_rink6.pgm  iihf_rink6.yaml  iihf_rink7.pgm  iihf_rink7.yaml  iihf_rink8.pgm  iihf_rink8.yaml  iihf_rink9.pgm  iihf_rink9.yaml
install/: setup.sh  (+1 more)
(+88 files in other folders)
